--- a/src/app/components/evaluacion-estudiante/evaluacion-estudiante.component.html
+++ b/src/app/components/evaluacion-estudiante/evaluacion-estudiante.component.html
@@ -1,3 +1,89 @@
-<p>
-  evaluacion-estudiante works!
-</p>
+<div class="jumbotron jumbotron-fluid ajustarMargen">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-5">
+          <img src="assets/img/cerebrito.png" class="img-fluid float-right" alt="Responsive image" height="50%" width="50%">
+        </div>
+        <div class="col-sm-7">
+          <br />
+          <br />
+          <br />
+          <h1 class="display-4">Psycho</h1>
+          <p class="lead">Usted se encuentra en el modulo de evaluación, puede ver sus resultados o realizar una autoevaluación.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="container">
+    <h1 class="display-4">Psiquiatría de Enlace</h1><br />
+    <div class="row">
+      <div class="col-sm-6"> 
+        <div class="card w-75" style="width: 18rem;">
+            <img class="card-img-top" src="assets/img/resultados.jpg" alt="Card image cap">
+            <div class="card-body">
+                <h5 class="card-title">Resultados</h5>
+                <p class="card-text">Conozca los resultados de su proceso evaluativo en el curso de psiquiatría de enlace.</p>
+                <button type="button" class="btn btn-primary" [routerLink]="['/resultados_estudiante']" routerLinkActive="router-link-active" >ver</button>
+            </div>
+          </div>
+      </div>
+      <div class="col-sm-6"> 
+        <div class="card w-75" style="width: 18rem;">
+            <img class="card-img-top" src="assets/img/autoevaluacion.jpg" alt="Card image cap">
+            <div class="card-body">
+                <h5 class="card-title">Autoevaluación</h5>
+                <p class="card-text">Realice una autoevaluación para su proceso de evaluación en el curso de psiquiatría de enlace.</p>
+                <button type="button" class="btn btn-primary" (click)="abrir(content)" >Autoevaluar</button>
+            </div>
+          </div>
+      </div>
+    </div>
+  </div>
+
+   <!-- Modal -->
+   <ng-template #content let-c="close" let-d="dismiss">
+    <div class="modal-header">
+      <h5>Autoevaluación</h5>
+      <button type="button" class="close" aria-label="Close" (click)="d('Cross click')">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    <div class="modal-body" >
+      <div class="row">
+        
+        <div class="col-sm-4" style="padding-bottom: 7%">
+          <button type="button" class="btn btn-outline-primary btnCompetencia" (click)="enviarValores('1')">Competencia 1</button>
+        </div>
+  
+        <div class="col-sm-4" style="padding-bottom: 7%">
+          <button type="button" class="btn btn-outline-primary btnCompetencia" (click)="enviarValores('2')">Competencia 2</button>
+        </div>
+       
+        <div class="col-sm-4" style="padding-bottom: 7%">
+          <button type="button" class="btn btn-outline-primary btnCompetencia" (click)="enviarValores('3')" >Competencia 3</button>
+        </div>
+        
+        <div class="col-sm-4" style="padding-bottom: 7%">
+          <button type="button" class="btn btn-outline-primary btnCompetencia" (click)="enviarValores('4')" >Competencia 4</button>
+        </div>
+       
+        <div class="col-sm-4" style="padding-bottom: 7%">
+          <button type="button" class="btn btn-outline-primary btnCompetencia" (click)="enviarValores('5')" >Competencia 5</button>
+        </div>
+        
+        <div class="col-sm-4" style="padding-bottom: 7%">
+          <button type="button" class="btn btn-outline-primary btnCompetencia" (click)="enviarValores('6')">Competencia 6</button>
+        </div>
+       
+        <div class="col-sm-4" style="padding-bottom: 7%">
+          <button type="button" class="btn btn-outline-primary btnCompetencia" (click)="enviarValores('7')">Competencia 7</button>
+        </div>
+      </div>
+  </div>
+    <div class="modal-footer">
+      <button type="button" class="btn btn-outline-primary" (click)="c('Close click')">Cerrar</button>
+    </div>
+  </ng-template>
+  
+  <br/>
